fix product height on small size

--- a/assets/css/product.scss
+++ b/assets/css/product.scss
@@ -257,7 +257,7 @@ body {
                     padding: 0;
                     position: relative;
                     border-radius: 8px;
-                    min-height: 24vh;
+                    // min-height: 24vh;
                     // max-height: 55vh;
                     // overflow: hidden;
                     @include mobile {
